k8s/push-receivers/push-receivers-controller.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: push-receivers
  namespace: ci
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: push-receivers
  template:
    metadata:
      labels:
        task: proxy
        k8s-app: push-receivers
    spec:
      containers:
      - name: push-receivers
        image: hub.docker.com/gluka/push-receivers:latest
        ports:
          - containerPort: 8081
            protocol: TCP
        volumeMounts:
        - name: config-volume
          mountPath: /etc/push-receivers
        resources:
          requests:
            cpu: 1m
            memory: 32Mi
          limits:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 60
          timeoutSeconds: 60
        readinessProbe:
          httpGet:
            path: /
            port: 8081
      volumes:
      - name: config-volume
        configMap:
          name: push-receivers
