k8s/push-receivers/push-receivers-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: push-receivers
  name: push-receivers
  namespace: ci
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
  selector:
    k8s-app: push-receivers
